# pdm-multirepo

./: .gitignore  action.yml  pyproject.toml  test.yml
.github/workflows/: test.yml
