[project]
name = "pdm-multirepo"
version = "0.1.0"
description = "Test pyproject for action test"
authors = [
    {name = "Rob Taylor", email = "rob.taylor@chipflow.io"},
]
dependencies = []
requires-python = ">=3.11.0"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[project.optional-dependencies]
test = [
    "pip-install-test>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
lint = [
    "ruff>=0.11.9",
]
docs = [
    "sphinx>=8.2.3",
]
